<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_formulario">FormularioActivity</string>
    <string name="labelNome">Nome:</string>
    <string name="labelSite">Site:</string>
    <string name="labelTelefone">Telefone:</string>
    <string name="labelEndereco">Endereco:</string>
    <string name="labelBotaoInserir">Inserir</string>
    <string name="labelNota">Nota</string>
    <string name="hintNota">Digite Aqui</string>
	<string name="hintSite">Digite Aqui</string>
	<string name="hintTelefone">Digite Aqui</string>
	<string name="hintEndereco">Digite Aqui</string>
	<string name="hintNome">Digite Aqui</string>
	
</resources>