<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormularioActivity" >

    <ImageButton
        android:id="@+id/foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelNome" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:hint="@string/hintNome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelSite" />

    <EditText
        android:id="@+id/site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSite" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelEndereco" />

    <EditText
        android:id="@+id/endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEndereco" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelTelefone" />

    <EditText
        android:id="@+id/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintTelefone" />

       <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelNota" />
       
    <SeekBar
        android:id="@+id/nota"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="10"
        >
    </SeekBar>

    <Button
        android:id="@+id/botaoInserir"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:text="@string/labelBotaoInserir"/>

</LinearLayout>